data/kafka/kafdrop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: kafdrop.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafdrop
            port:
              number: 9000
